add postInitSQL key in puppetserver psql to add psql extensions required for puppet 8

--- a/argocd-helm-charts/puppetserver/templates/postgresql.yaml
+++ b/argocd-helm-charts/puppetserver/templates/postgresql.yaml
@@ -17,6 +17,9 @@ spec:
     initdb:
       database: puppetdb
       owner: puppetdb
+      postInitSQL:
+        - CREATE EXTENSION IF NOT EXISTS pg_trgm
+        - CREATE EXTENSION IF NOT EXISTS pgcrypto
   {{ end }}
   resources:
     limits:
