feat(capi-cluster/aws) : accepting existing VPC ID from the user
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSCluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/templates/AWSCluster.yaml
@@ -10,6 +10,9 @@ spec:
   bastion: {{ toYaml .Values.bastion | nindent 4 }}
   network:
     vpc:
+      {{- if .Values.vpc.id }}
+      id: {{ .Values.vpc.id }}
+      {{- end }}
       cidrBlock: {{ .Values.vpc.cidrBlock }}
     cni:
       cniIngressRules:
