use postInitApplicationSQL instead of postInitSQL in puppet psql to add extensions

--- a/argocd-helm-charts/puppetserver/templates/postgresql.yaml
+++ b/argocd-helm-charts/puppetserver/templates/postgresql.yaml
@@ -17,7 +17,7 @@ spec:
     initdb:
       database: puppetdb
       owner: puppetdb
-      postInitSQL:
+      postInitApplicationSQL:
         - CREATE EXTENSION IF NOT EXISTS pg_trgm
         - CREATE EXTENSION IF NOT EXISTS pgcrypto
   {{ end }}
