[Fix] Install promtool v2.55.0
Problem:
https://gitea.obmondo.com/EnableIT/opsmondo/actions/runs/1731/jobs/2
During promtool CI test in Opsmondo, the alert tests are failing.

Cause:
As of now, we using ubuntu noble as base image, via which we're installing
promtool v2.45.3. This is causing problems, since it doesn't support
the tests we have written in Opsmondo.

Solution:
We're manually installing the latest promtool in v2 series.
This will fix the promtool CI in Opsmondo.

Resolves: https://gitea.obmondo.com/EnableIT/opsmondo/issues/95
Suggested-by: Ashish Jaiswal <ashish@obmondo.com>
Signed-off-by: Sidharth Jawale <sidharth@obmondo.com>

--- a/.gitea/Dockerfile
+++ b/.gitea/Dockerfile
@@ -4,6 +4,7 @@ LABEL org.opencontainers.image.authors="Ashish Jaiswal <ashish@enableit.dk>"
 
 ENV GOPATH="/root/go"
 ENV PATH="/usr/lib/go-1.19/bin:${GOPATH}/bin:${PATH}"
+ENV PROMTOOL_VERSION="2.55.0"
 
 WORKDIR /tmp
 
@@ -12,9 +13,8 @@ RUN apt-get update                                          \
     && add-apt-repository ppa:longsleep/golang-backports -y \
     && apt-get update                                       \
     && apt-get install -y                                   \
-        shellcheck                                          \
-        prometheus                                          \
-        golang
+    shellcheck                                              \
+    golang
 
 # jsonnet
 RUN go install github.com/jsonnet-bundler/jsonnet-bundler/cmd/jb@v0.5.1
@@ -22,6 +22,11 @@ RUN go install github.com/brancz/gojsontoyaml@latest
 RUN go install github.com/google/go-jsonnet/cmd/jsonnet@v0.20.0
 RUN go install github.com/google/go-jsonnet/cmd/jsonnetfmt@latest
 RUN go install github.com/monitoring-mixins/mixtool/cmd/mixtool@main
+
+# promtool
+RUN wget https://github.com/prometheus/prometheus/releases/download/v${PROMTOOL_VERSION}/prometheus-${PROMTOOL_VERSION}.linux-amd64.tar.gz
+RUN tar -xvzf prometheus-${PROMTOOL_VERSION}.linux-amd64.tar.gz
+RUN mv prometheus-${PROMTOOL_VERSION}.linux-amd64/promtool /usr/local/bin/
 
 # helm
 RUN curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
