--- a/argocd-helm-charts/capi-cluster/charts/azure/templates/AzureManagedCluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/azure/templates/AzureManagedCluster.yaml
@@ -1,7 +1,6 @@
-{{- if .Values.managedCluster }}
+{{- if .Values.managedCluster.enabled }}
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: AzureManagedCluster
 metadata:
   name: {{ .Values.global.clusterName }}
-  namespace: {{ .Release.Namespace }}
 {{- end }}
