--- a/argocd-helm-charts/capi-cluster/templates/provider-aws.yaml
+++ b/argocd-helm-charts/capi-cluster/templates/provider-aws.yaml
@@ -30,6 +30,7 @@ spec:
         operator: "Exists"
         effect: "NoSchedule"
   manager:
+    cacheNamespace: {{ $namespace }}
     metrics:
       bindAddress: ":8181"
     syncPeriod: 10m0s
