--- a/argocd-helm-charts/capi-cluster/charts/aws/values.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/aws/values.yaml
@@ -3,9 +3,11 @@ secretName: cloud-credentials
 bastion:
   enabled: True
 vpc:
-  id: ""
   cidrBlock: 10.14.0.0/22
+  id: ""
 pods:
   cidrBlock: 10.244.0.0/16
 controlPlane:
-  loadBalancerType: nlb
+  loadBalancer:
+    type: nlb
+    scheme: internet-facing
