--- a/argocd-helm-charts/capi-cluster/charts/azure/templates/AzureCluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/azure/templates/AzureCluster.yaml
@@ -3,39 +3,38 @@ apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: AzureCluster
 metadata:
   name: {{ .Values.global.clusterName }}
-  namespace: {{ .Release.Namespace }}
 spec:
   location: {{ .Values.location }}
+
   resourceGroup: {{ .Values.resourceGroup }}
   subscriptionID: {{ .Values.subscriptionID }}
+
   identityRef:
     apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
     kind: AzureClusterIdentity
     name: {{ .Values.global.clusterName }}-cluster-identity
+
   bastionSpec:
     azureBastion:
-      enableTunneling: true
       name: bastion
+      enableTunneling: true
       publicIP:
         name: bastion
       sku: Standard
-      subnet: 
+      subnet:
         name: AzureBastionSubnet
+        role: ControlPlane
 
   networkSpec:
     apiServerLB:
       type: {{ .Values.selfManagedCluster.apiLoadbalancer }}
     vnet:
-      name: {{ .Values.global.virtualNetwork.name }}
-      {{- if ne .Values.global.virtualNetwork.cidrBlock "" }}
+      name: {{ .Values.global.vnet.name }}
       cidrBlocks:
-        - {{ .Values.global.virtualNetwork.cidrBlock | toString }}
-      {{- end }}
+        - {{ .Values.global.vnet.cidrBlock | default "10.14.0.0/22" }}
     subnets:
-      - name: {{ .Values.global.virtualNetwork.subnet.name }}
-        role: node
-        {{- if ne .Values.global.virtualNetwork.subnet.cidrBlock "" }}
-        cidrBlocks:
-          - {{ .Values.global.virtualNetwork.subnet.cidrBlock | toString }}
-        {{- end }}
+      - name: control-plane
+        role: ControlPlane
+      - name: worker-nodes
+        role: Node
 {{- end }}
