--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/Cluster.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/Cluster.yaml
@@ -4,12 +4,11 @@ metadata:
   name: {{ .Values.global.clusterName }}
   labels:
     cluster.x-k8s.io/name: {{ .Values.global.clusterName }}
-    capi.syself.com/constant-bare-metal-hostname: "true"
 spec:
   clusterNetwork:
     pods:
       cidrBlocks:
-      - {{ .Values.pods.cidrBlocks | default "10.244.0.0/16" }}
+        - {{ (.Values.pods).cidrBlocks | default "10.244.0.0/16" }}
   controlPlaneRef:
     apiVersion: controlplane.cluster.x-k8s.io/v1beta1
     kind: KubeadmControlPlane
