--- a/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalHost.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/hetzner/templates/HetznerBareMetalHost.yaml
@@ -1,4 +1,6 @@
-{{- range $key, $value := .Values.nodes }}
+{{/* CASE : Control Plane is in Hetzner Bare Metal. */}}
+{{- if and ((.Values.robot).enabled) ((.Values.robot).controlPlane) }}
+{{- range $key, $value := .Values.robot.controlPlane.nodes }}
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: HetznerBareMetalHost
 metadata:
@@ -14,6 +16,7 @@ spec:
       {{- range $value.wwn }}
         - {{ . | quote }}
       {{- end }}
-  description: "Cluster {{ $.Values.global.clusterName }} control plane node {{ $value.name }}"
+  description: "Bare metal node {{ $value.name }} used by cluster {{ $.Values.global.clusterName }}"
 ---
+{{- end }}
 {{- end }}
