--- a/argocd-helm-charts/capi-cluster/examples/aws/cluster-autoscaler.yaml
+++ b/argocd-helm-charts/capi-cluster/examples/aws/cluster-autoscaler.yaml
@@ -1,8 +1,11 @@
 global:
-  clusterName: kubeaid-demo
+  clusterName: kubeaid-demo-aws
+  kubernetes:
+    version: v1.31.0
+  kubeaid:
+    repo: https://github.com/Archisman-Mridha/kubeaid
   kubeaidConfig:
     repo: https://github.com/Archisman-Mridha/kubeaid-config
-
 provider:
   aws: true
 
@@ -20,37 +23,24 @@ aws:
     loadBalancer:
       loadBalancerType: nlb
     region: us-east-1
-    replicas: 1
+    replicas: 3
     instanceType: t4g.medium
     ami:
-      id: ami-0fc044fa0d061d18d
+      id: ami-0c4219b11327ef260
+    apiServer:
+      extraArgs: {}
+      extraVolumes: []
+      files: []
   nodeGroups:
-    - name: primary
-      # minSize: 1
-      # maxSize: 3
-      # replicas: 2
+    - name: bootstrapper
+      minSize: 1
+      maxSize: 3
       instanceType: t4g.medium
       sshKeyName: kubeaid-demo
       ami:
-        id: ami-0fc044fa0d061d18d
+        id: ami-0c4219b11327ef260
       rootVolumeSize: 35
       labels:
-        node.cluster.x-k8s.io/nodegroup: primary
         node-role.kubernetes.io/bootstrapper: ""
+        node.cluster.x-k8s.io/nodegroup: bootstrapper
       taints: []
-    - name: secondary
-      # minSize: 1
-      # maxSize: 3
-      # replicas: 2
-      instanceType: t4g.medium
-      sshKeyName: kubeaid-demo
-      ami:
-        id: ami-0fc044fa0d061d18d
-      rootVolumeSize: 35
-      labels:
-        node.cluster.x-k8s.io/nodegroup: secondary
-      taints:
-        - key: dedicated
-          value: guilherme-taint
-          effect: NoSchedule
-          timeadded: null
